[gd_scene load_steps=11 format=3 uid="uid://bdtahurxldh4f"]

[ext_resource type="Script" path="res://Enemies/EnemyScripts/bee.gd" id="1_wcku3"]
[ext_resource type="Texture2D" uid="uid://b6s80bl5khyct" path="res://Art/3rdParty/Mob/Small Bee/Fly/Fly-Sheet.png" id="2_5ugjy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gkn44"]
atlas = ExtResource("2_5ugjy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4kpe"]
atlas = ExtResource("2_5ugjy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl5nw"]
atlas = ExtResource("2_5ugjy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2avq"]
atlas = ExtResource("2_5ugjy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_uacgx"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkn44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4kpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl5nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2avq")
}],
"loop": true,
"name": &"idle_fly",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nwyrw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yh03f"]
radius = 108.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cc6b5"]

[node name="Bee" type="CharacterBody2D"]
script = ExtResource("1_wcku3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uacgx")
animation = &"idle_fly"
autoplay = "idle_fly"
offset = Vector2(0, -8)

[node name="hit_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_detection"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_nwyrw")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_yh03f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_cc6b5")

[connection signal="body_entered" from="hit_detection" to="." method="_on_hit_detection_body_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
